WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241327
[GTK] Ubuntu LTS bot build failed after
251271@main
https://bugs.webkit.org/show_bug.cgi?id=241327
Summary
[GTK] Ubuntu LTS bot build failed after 251271@main
Diego Pino
Reported
2022-06-06 00:28:04 PDT
Stderr log:
https://build.webkit.org/#/builders/68/builds/14106/steps/9/logs/stdio
``` In file included from WebCore/DerivedSources/unified-sources/UnifiedSource-f34946be-6.cpp:2: ../../Source/WebCore/editing/ReplaceSelectionCommand.cpp: In member function ‘void WebCore::ReplacementFragment::removeContentsWithSideEffects()’: ../../Source/WebCore/editing/ReplaceSelectionCommand.cpp:233:108: error: ambiguous overload for ‘operator!=’ (operand types are ‘const WTF::AtomString’ and ‘const WTF::ASCIILiteral’) 233 | if (isScriptElement(element) || (is<HTMLStyleElement>(element) && element->getAttribute(classAttr) != WebKitMSOListQuirksStyle) | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^~ ~~~~~~~~~~~~~~~~~~~~~~~~ | | | | | const WTF::ASCIILiteral | const WTF::AtomString ``` ``` Source/WebCore/html/FormController.cpp:150:32: error: ambiguous overload for ‘operator!=’ (operand types are ‘const WTF::AtomString’ and ‘WTF::ASCIILiteral’) 150 | if (element.key.second != "file"_s) // type | ~~~~~~~~~~~~~~~~~~ ^~ ~~~~~~~~ | | | | | WTF::ASCIILiteral | const WTF::AtomString ```
Attachments
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2022-06-06 00:53:47 PDT
Pull request:
https://github.com/webkit/webkit/pull/1317
EWS
Comment 2
2022-06-09 07:09:27 PDT
Committed
r295419
(
251425@main
): <
https://commits.webkit.org/251425@main
> Reviewed commits have been landed. Closing PR #1317 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-06-09 07:10:18 PDT
<
rdar://problem/94725265
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug